<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


         <ImageView
             android:layout_width="@dimen/_250sdp"
             android:layout_height="@dimen/_100sdp"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="@dimen/_10sdp"
             android:src="@drawable/cleaning"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@color/new_splash_bg" />

            <TextView
                android:id="@+id/txtbtnpress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/txt_title_1"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvApartment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@color/new_splash_bg" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/txt_title_2"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvBedroom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"/>




            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@color/new_splash_bg" />


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/txt_title_3"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />


<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/rvBathroom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@color/new_splash_bg" />


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/txt_title_4"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />


         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvRoomView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/_10sdp"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@color/new_splash_bg" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/txt_title_5"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvKitchen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@color/new_splash_bg" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/txt_title_6"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:padding="@dimen/_3sdp"
                android:text="@string/txt_title_7"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
               android:layout_margin="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                android:background="@drawable/btn_customise"/>




        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/bottomView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/bg_title"
        android:orientation="horizontal"
        android:padding="@dimen/_12sdp">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_plus_bottom"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_plus_minus_button"
            android:fontFamily="sans-serif-thin"
            android:text="@string/plus"
            android:textColor="@color/bg_button"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/tv_product_spacial_price"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_item_count_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:text="@string/default_iteam_count"
            android:textColor="@color/error_bg"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_plus"
            app:layout_constraintEnd_toStartOf="@+id/btn_plus"
            app:layout_constraintTop_toTopOf="@+id/btn_plus" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_minus_bottom"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_plus_minus_button"
            android:fontFamily="sans-serif-thin"
            android:text="@string/minu"
            android:textColor="@color/bg_button"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/tv_item_count"
            app:layout_constraintEnd_toStartOf="@+id/tv_item_count"
            app:layout_constraintTop_toTopOf="@+id/tv_item_count" />


        <TextView
            android:id="@+id/txtAddOrderPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_pay"
            android:gravity="center_horizontal"
            android:padding="@dimen/_8sdp"
            android:text="@string/txt_AddtoCart"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"/>


    </LinearLayout>


</RelativeLayout>