<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center">


        <ImageView
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:src="@drawable/cleaning"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/new_splash_bg"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/_25sdp"
            android:text="@string/app_subtitle"/>



    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_50sdp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        android:padding="@dimen/_10sdp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/_60sdp"
                android:src="@drawable/household"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_20sdp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_txt_top"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/black"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_txt_myop_price"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textSize="@dimen/_13sdp"
                    android:textColor="@color/black"/>




            </LinearLayout>



            <TextView
                android:id="@+id/txtbtnpress"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/txt_customisepack"
                android:textSize="@dimen/_12sdp"
                android:padding="@dimen/_5sdp"
                android:layout_gravity="center"
                android:background="@drawable/btn_customise"
                android:textColor="@color/black"/>




        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>










</LinearLayout>