<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_5sdp"
        app:cardPreventCornerOverlap="true"
        android:layout_margin="@dimen/_10sdp">
        
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_3sdp"
            android:orientation="vertical">
            
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/_10sdp">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight="0.8"
                        android:layout_height="@dimen/_60sdp"
                        android:src="@drawable/household"/>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/ivCancle"
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_alignParentRight="true"
                            android:src="@drawable/cancel"/>

                        <LinearLayout
                            android:id="@+id/lititleView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:layout_marginRight="@dimen/_5sdp">


                            <TextView
                                android:id="@+id/txtCustomise"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/main_txt_top"
                                android:textSize="@dimen/_15sdp"
                                android:textColor="@color/black"/>


                            <TextView
                                android:id="@+id/txtCustomiseSubtitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/main_txt_myop_price"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:textSize="@dimen/_11sdp"
                                android:textColor="@color/black"/>


                        </LinearLayout>


                    </RelativeLayout>



                </LinearLayout>
                
                
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bottomView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_12sdp">


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_plus_bottom"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/bg_plus_minus_button"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/plus"
                    android:textColor="@color/bg_button"
                    android:textStyle="bold"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_product_spacial_price"
                    app:layout_constraintEnd_toEndOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_item_count_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:text="@string/default_iteam_count"
                    android:textColor="@color/error_bg"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_plus"
                    app:layout_constraintEnd_toStartOf="@+id/btn_plus"
                    app:layout_constraintTop_toTopOf="@+id/btn_plus" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_minus_bottom"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/bg_plus_minus_button"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/minu"
                    android:textColor="@color/bg_button"
                    android:textStyle="bold"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_item_count"
                    app:layout_constraintEnd_toStartOf="@+id/tv_item_count"
                    app:layout_constraintTop_toTopOf="@+id/tv_item_count" />


                <TextView
                    android:id="@+id/txtAddOrderPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_pay"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/txt_AddtoCart"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp"/>


            </LinearLayout>
            
            
            
            
        </LinearLayout>
        
        
        
        
        
    </androidx.cardview.widget.CardView>

</LinearLayout>